Make //components/crash/core/common:crash_key a component when using Breakpad.
With Breakpad, the crash key storage is stored in a static global, and
having the target be a static_library resulted in having multiple copies
existing in the component build.

This also changes the Breakpad crash key storage to be lazily
initialized, which matches what Crashpad does after
https://chromium-review.googlesource.com/c/crashpad/crashpad/+/793981.
The storage is still initialized deterministically in the static release
build, but is done to support unit tests.

Bug: 598854
Change-Id: Ic6f100fd0310545fe2697152bd076846153f16d2

--- a/components/crash/core/common/BUILD.gn
+++ b/components/crash/core/common/BUILD.gn
@@ -13,7 +13,19 @@ group("common") {
   }
 }
 
-static_library("crash_key") {
+use_crashpad = is_mac || is_win
+use_stubs = is_fuchsia
+
+# Crashpad's annotation system can store data on a per-module basis (i.e.,
+# in different shared libraries in the component build) without issue. The
+# Breakpad implementation uses a static global variable, so there should
+# only be one, necessitating it being in its own shared library.
+if (use_crashpad || use_stubs) {
+  crash_key_target_type = "static_library"
+} else {
+  crash_key_target_type = "component"
+}
+target(crash_key_target_type, "crash_key") {
   sources = [
     "crash_key.cc",
     "crash_key.h",
@@ -21,14 +33,16 @@ static_library("crash_key") {
     "crash_key_base_support.h",
   ]
 
+  defines = [ "CRASH_CORE_COMMON_IMPLEMENTATION" ]
+
   deps = [
     "//base",
   ]
 
-  if (is_mac || is_win) {
+  if (use_crashpad) {
     sources += [ "crash_key_crashpad.cc" ]
     deps += [ "//third_party/crashpad/crashpad/client" ]
-  } else if (is_fuchsia) {
+  } else if (use_stubs) {
     sources += [ "crash_key_stubs.cc" ]
   } else {
     include_dirs = [ "//third_party/breakpad/breakpad/src/" ]
