Rename Chrome.LUCI pool to luci.chromium.try.
R=vadimsh@chromium.org

Bug: 767735
Change-Id: I2c188062691b83a75a79493d9864d538f42a6083

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -260,7 +260,7 @@ buckets {
     builder_defaults {
       category: "Chromium CQ"
       dimensions: "cpu:x86-64"
-      dimensions: "pool:Chrome.LUCI"
+      dimensions: "pool:luci.chromium.try"
       service_account: "chromium-try-builder@chops-service-accounts.iam.gserviceaccount.com"
       execution_timeout_secs: 10800  # 3h
       build_numbers: true
