[fuchsia] add printing::Image::LoadMetafile() stub
libprinting.so was failing to link in component build on Fuchsia.

Bug: 707031
Change-Id: Ic9957f9184cc07c95ddca551c1abcc023f9f1102

--- a/printing/BUILD.gn
+++ b/printing/BUILD.gn
@@ -82,6 +82,9 @@ component("printing") {
     "units.cc",
     "units.h",
   ]
+  if (is_fuchsia) {
+    sources += [ "image_fuchsia.cc" ]
+  }
 
   cflags = []
   defines = [ "PRINTING_IMPLEMENTATION" ]
