Changing SafeManifestParser to use the SafeXmlParser service.
Changing SafeManifestParser to use the SafeXmlParser service instead of
having a dedicated Mojo interface for doing the parsing of extension
manifests.
SafeXmlParser parses the XML in a sandboxed process and returns a
base::Value that can be traversed in the browser process.

As a result, the mojom, traits, typemap files have been removed.
The implementation of the parsing has been moved to
safe_manifest_parser.cc.

The update_manifest_unittest.cc was moved to
safe_manifest_parser_unittest.cc and split into several tests (no
changes to the logic).

Bug: 786613
Change-Id: Ia586ea0e9689d45130013b6d4d992318eb9b7dc4

--- a/extensions/browser/BUILD.gn
+++ b/extensions/browser/BUILD.gn
@@ -557,6 +557,7 @@ source_set("unit_tests") {
     "requirements_checker_unittest.cc",
     "runtime_data_unittest.cc",
     "sandboxed_unpacker_unittest.cc",
+    "updater/safe_manifest_parser_unittest.cc",
     "updater/update_service_unittest.cc",
     "value_store/leveldb_scoped_database_unittest.cc",
     "value_store/leveldb_value_store_unittest.cc",
@@ -595,6 +596,7 @@ source_set("unit_tests") {
     "//extensions/features",
     "//ipc:test_support",
     "//net:test_support",
+    "//services/data_decoder/public/cpp:test_support",
     "//services/device/public/interfaces",
     "//storage/browser:test_support",
     "//third_party/leveldatabase",
