PublicIpAddressGeolocationProvider interface and implementation
original owner: amoylan@chromium.org
original cl: https://chromium-review.googlesource.com/c/chromium/src/+/754255

This CL is part of the implementation of public-IP-only geolocation
as described in the design doc:
https://docs.google.com/document/d/1oSQM3GEMTL1raWLYv8S6_Yyt93FF2zQbANI4bKJ6LDs

This part is a new Mojo interface PublicIpAddressGeolocationProvider
that provides mojom::Geolocation implementations using the
PublicIpAddressGeolocator (from the upstream dependent CL).

In a subsequent CL, DeviceService will provide this implementation
of PublicIpAddressGeolocationProvider via ServiceManager.

Change-Id: I2458c816b5a861a409ab2b3a5defa8d80444c59e

--- a/services/device/public/interfaces/BUILD.gn
+++ b/services/device/public/interfaces/BUILD.gn
@@ -14,12 +14,18 @@ mojom("interfaces") {
     "nfc.mojom",
     "nfc_provider.mojom",
     "power_monitor.mojom",
+    "public_ip_address_geolocation_provider.mojom",
     "serial.mojom",
     "time_zone_monitor.mojom",
     "vibration_manager.mojom",
     "wake_lock.mojom",
     "wake_lock_context.mojom",
     "wake_lock_provider.mojom",
+  ]
+
+  deps = [
+    "//device/geolocation/public/interfaces",
+    "//services/network/public/interfaces:interfaces",
   ]
 
   public_deps = [
