Remove IOSSigninClient and have IOSWebViewSigninClient and IOSChromeSigninClient directly inherit from SigninClient.
Partial implementations are not preferred when sharing code between
//ios/chrome and //ios/web_view. Instead, convert to using helper
classes (using composition) wherever possible.

Introduced DelayCallbackHelper to handle saving callbacks and
firing them later after regaining connection.

Bug:774517
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I0fa0ad558ee518b0eefb110f34f9480d69b59a6a

--- a/components/signin/ios/browser/BUILD.gn
+++ b/components/signin/ios/browser/BUILD.gn
@@ -7,8 +7,8 @@ source_set("browser") {
   sources = [
     "account_consistency_service.h",
     "account_consistency_service.mm",
-    "ios_signin_client.cc",
-    "ios_signin_client.h",
+    "delay_callback_helper.cc",
+    "delay_callback_helper.h",
     "manage_accounts_delegate.h",
     "merge_session_observer_bridge.h",
     "merge_session_observer_bridge.mm",
@@ -70,6 +70,7 @@ source_set("unit_tests") {
   sources = [
     "account_consistency_service_unittest.mm",
     "active_state_manager_impl_unittest.mm",
+    "delay_callback_helper_unittest.cc",
     "profile_oauth2_token_service_ios_delegate_unittest.mm",
   ]
 
