[fuchsia] add printing::Image::LoadMetafile() stub
libprinting.so was failing to link in component build on Fuchsia.

Bug: 707031
Change-Id: Ic9957f9184cc07c95ddca551c1abcc023f9f1102

--- a/printing/BUILD.gn
+++ b/printing/BUILD.gn
@@ -242,6 +242,10 @@ component("printing") {
       "pdf_transform.h",
     ]
   }
+
+  if (is_fuchsia) {
+    sources += [ "image_fuchsia.cc" ]
+  }
 }
 
 static_library("test_support") {
