--- a/services/network/public/interfaces/BUILD.gn
+++ b/services/network/public/interfaces/BUILD.gn
@@ -17,7 +17,7 @@ mojom("interfaces") {
     "restricted_cookie_manager.mojom",
   ]
 
-  public_deps = [
+  deps = [
     "//mojo/common:common_custom_types",
     "//url/mojo:url_mojom_gurl",
   ]
