--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -1311,6 +1311,11 @@ test("browser_tests") {
         "../browser/ui/global_error/global_error_service_browsertest.cc",
         "../browser/ui/views/autofill/card_unmask_prompt_view_tester_views.cc",
         "../browser/ui/views/autofill/card_unmask_prompt_view_tester_views.h",
+        "../browser/ui/views/autofill/dialog_event_observer.cc",
+        "../browser/ui/views/autofill/dialog_event_observer.h",
+        "../browser/ui/views/autofill/save_card_bubble_views_browsertest.cc",
+        "../browser/ui/views/autofill/save_card_bubble_views_browsertest_base.cc",
+        "../browser/ui/views/autofill/save_card_bubble_views_browsertest_base.h",
         "../browser/ui/views/bookmarks/bookmark_bubble_view_browsertest.cc",
         "../browser/ui/views/bookmarks/bookmark_editor_view_browsertest.cc",
         "../browser/ui/views/extensions/extension_message_bubble_view_browsertest.cc",
