--- a/content/public/common/BUILD.gn
+++ b/content/public/common/BUILD.gn
@@ -359,6 +359,7 @@ mojom("interfaces") {
     "network_service.mojom",
     "network_service_test.mojom",
     "push_messaging_status.mojom",
+    "speech_recognition_grammar.mojom",
     "url_loader.mojom",
     "url_loader_factory.mojom",
     "webplugininfo.mojom",
