--- a/content/public/common/typemaps.gni
+++ b/content/public/common/typemaps.gni
@@ -7,6 +7,7 @@ typemaps = [
   "//content/public/common/manifest.typemap",
   "//content/public/common/referrer.typemap",
   "//content/public/common/resource_type.typemap",
+  "//content/public/common/speech_recognition_grammar.typemap",
   "//content/public/common/ssl_info.typemap",
   "//content/public/common/url_loader_completion_status.typemap",
   "//content/public/common/url_request.typemap",
