Test cq on infra/config.
No-Try: True
Bug: 790738
Change-Id: I6415dd890dd589195e2f79e29b49c8082a96f6a5

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -216,6 +216,7 @@ buckets {
 
   swarming {
     builder_defaults {
+      Test-field: "doesn't exist"
       category: "Chromium Variable"
       dimensions: "pool:luci.chromium.findit"
       service_account: "findit-builder@chops-service-accounts.iam.gserviceaccount.com"
