--- a/cc/paint/BUILD.gn
+++ b/cc/paint/BUILD.gn
@@ -32,6 +32,8 @@ cc_component("paint") {
     "paint_flags.h",
     "paint_font.cc",
     "paint_font.h",
+    "paint_font_loader_mac.h",
+    "paint_font_loader_mac_in_process_only.h",
     "paint_image.cc",
     "paint_image.h",
     "paint_image_builder.cc",
@@ -75,6 +77,18 @@ cc_component("paint") {
     "transfer_cache_entry.cc",
     "transfer_cache_entry.h",
   ]
+
+  if (is_mac) {
+    sources += [
+      "paint_font_loader_mac_in_process_only.mm",
+      "paint_typeface_mac.mm",
+    ]
+
+    libs = [
+      "AppKit.framework",
+      "Foundation.framework",
+    ]
+  }
 
   defines = [ "CC_PAINT_IMPLEMENTATION=1" ]
 
