--- a/chromecast/browser/android/apk/templates/BuildConfig.template
+++ b/chromecast/browser/android/apk/templates/BuildConfig.template
@@ -13,4 +13,14 @@ public class BuildConfig {
 
   // Set the number of lines for LogcatExtractor to send.
   public static final int LOGCAT_SIZE = _LOGCAT_EXTRACTOR_SIZE;
+
+    public static final boolean USE_REMOVE_SERVICE_LOGCAT =
+#if defined(_USE_REMOVE_SERVICE_LOGCAT)
+    true;
+#else
+    false;
+#endif
+
+    public static final String DEVICE_LOGS_PROVIDER_PACKAGE =  _DEVICE_LOGS_PROVIDER_PACKAGE;
+    public static final String DEVICE_LOGS_PROVIDER_CLASS = _DEVICE_LOGS_PROVIDER_CLASS;
 }
