--- a/chromecast/chromecast.gni
+++ b/chromecast/chromecast.gni
@@ -58,6 +58,13 @@ declare_args() {
 
   # Set the number of lines for LogcatExtractor to send.
   logcat_extractor_size = 512
+
+  # Set to true to get logcat from a remote service
+  use_remove_service_logcat = false
+
+  # Set the package name and class path for the component which will provide device logs
+  device_logs_provider_package = "\"\""
+  device_logs_provider_class = "\"\""
 }
 
 declare_args() {
