Cros splitscreen: Support resizable Arc Apps in split screen.
Bug:725683
Change-Id: Ibcfce9f8658c326471410e50c4311967d5bee043

--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -994,6 +994,7 @@ component("ash") {
     "wm/wm_window_animations.h",
     "wm/workspace/backdrop_controller.cc",
     "wm/workspace/backdrop_controller.h",
+    "wm/workspace/backdrop_delegate.cc",
     "wm/workspace/backdrop_delegate.h",
     "wm/workspace/magnetism_matcher.cc",
     "wm/workspace/magnetism_matcher.h",
