Add GPU builders to migration console
Bug: 790061
Change-Id: I9614b884b659d0473ac25f8ae79531c0fe6b97d7

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -1473,6 +1473,17 @@ consoles: {
   include_experimental_builds: true
 
   builders: {
+    name: "buildbucket/luci.chromium.ci/GPU Linux Builder"
+    category: "gpu|linux|release|builder"
+    short_name: "ᕕ(ᐛ)ᕗ"
+  }
+  builders: {
+    name: "buildbot/chromium.gpu/GPU Linux Builder"
+    category: "gpu|linux|release|builder"
+    short_name: "(ಥ_ಥ)"
+  }
+
+  builders: {
     name: "buildbucket/luci.chromium.ci/Linux Builder (dbg)"
     category: "linux|debug|builder|64"
     short_name: "🦋"
