[VR] Javascript Dialogs in VR
This CL enables the Chrome's Javascript Dialog in VR behind a flag.

The changes on the following files and the related wiring are borrowed from
https://chromium-review.googlesource.com/c/chromium/src/+/652354/
VrShellDelegate.java
VrShellImpl.java
vr_shell_gl.cc
vr_shell_gl.h

The View from the 2D dialog is converted into a texture and is
shown in VR on a quad. The events from the controller are translated
to MotionEvents and are sent back to the 2D dialog.

It is made possible to replace ModalDialogManager in ChromeActivity. The
ModalDialogManager is replaced with a new one when going in/out VR mode.
The ModalDialogManager that is used in VR uses VrModalDialogPresenter that
shows dialogs on a quad in 3D space in front of the main content.

The view from 2D Javascript dialog is attached to the DecorView to
make sure that the View will receive all the event.

The close button will be added to this dialogs in the follow up CLs.

Bug:779126
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Iaae0147d1711297cc7dd992fe3986642669bc102

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -641,6 +641,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/modaldialog/ModalDialogView.java",
   "java/src/org/chromium/chrome/browser/modaldialog/TabModalLifetimeHandler.java",
   "java/src/org/chromium/chrome/browser/modaldialog/TabModalPresenter.java",
+  "java/src/org/chromium/chrome/browser/modaldialog/VrModalPresenter.java",
   "java/src/org/chromium/chrome/browser/mojo/ChromeInterfaceRegistrar.java",
   "java/src/org/chromium/chrome/browser/multiwindow/MultiInstanceChromeTabbedActivity.java",
   "java/src/org/chromium/chrome/browser/multiwindow/MultiWindowUtils.java",
@@ -1264,6 +1265,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/vr/CustomTabVrActivity.java",
   "java/src/org/chromium/chrome/browser/vr/VrMainActivity.java",
   "java/src/org/chromium/chrome/browser/vr_shell/VrCancelAnimationActivity.java",
+  "java/src/org/chromium/chrome/browser/vr_shell/VrDialog.java",
   "java/src/org/chromium/chrome/browser/vr_shell/VrClassesWrapper.java",
   "java/src/org/chromium/chrome/browser/vr_shell/VrCompositorSurfaceManager.java",
   "java/src/org/chromium/chrome/browser/vr_shell/VrCoreVersionChecker.java",
