--- a/content/browser/BUILD.gn
+++ b/content/browser/BUILD.gn
@@ -663,6 +663,8 @@ jumbo_source_set("browser") {
     "dom_storage/dom_storage_session.h",
     "dom_storage/dom_storage_task_runner.cc",
     "dom_storage/dom_storage_task_runner.h",
+    "dom_storage/leveldb_ref_counted_map.cc",
+    "dom_storage/leveldb_ref_counted_map.h",
     "dom_storage/local_storage_context_mojo.cc",
     "dom_storage/local_storage_context_mojo.h",
     "dom_storage/local_storage_database_adapter.cc",
@@ -673,6 +675,8 @@ jumbo_source_set("browser") {
     "dom_storage/session_storage_database.h",
     "dom_storage/session_storage_database_adapter.cc",
     "dom_storage/session_storage_database_adapter.h",
+    "dom_storage/session_storage_leveldb_wrapper.cc",
+    "dom_storage/session_storage_leveldb_wrapper.h",
     "dom_storage/session_storage_namespace_impl.cc",
     "dom_storage/session_storage_namespace_impl.h",
     "download/base_file.cc",
