[3] Add a sandboxed RAR analyzer that does not analyze .rar files
TODOs:
- Implement SafeArchiveAnalyzer::AnalyzeRarFile
- Integrate with third_party/unrar

Bug: 750327
Change-Id: I7b4b1e2c35d7c0191928d6dd00846fbf78ef9fa4

--- a/chrome/services/file_util/public/cpp/BUILD.gn
+++ b/chrome/services/file_util/public/cpp/BUILD.gn
@@ -14,6 +14,8 @@ source_set("cpp") {
     sources = [
       "sandboxed_dmg_analyzer_mac.cc",
       "sandboxed_dmg_analyzer_mac.h",
+      "sandboxed_rar_analyzer.cc",
+      "sandboxed_rar_analyzer.h",
       "sandboxed_zip_analyzer.cc",
       "sandboxed_zip_analyzer.h",
     ]
