--- a/chromecast/chromecast.gni
+++ b/chromecast/chromecast.gni
@@ -58,6 +58,18 @@ declare_args() {
 
   # Set the number of lines for LogcatExtractor to send.
   logcat_extractor_size = 512
+
+  if (is_android) {
+    # Set to true to get logcat from a remote service
+    # If false, will only get the logs of the app.
+    use_remote_service_logcat = false
+
+    # Set the package name and class path for the component which will provide device logs
+    # Values defined in eureka-internal
+    # Using these values requires use_remote_service_logcat to be true
+    device_logs_provider_package = ""
+    device_logs_provider_class = ""
+  }
 }
 
 declare_args() {
