--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -1677,6 +1677,7 @@ test("browser_tests") {
         "//components/exo:test_support",
         "//components/prefs",
         "//components/user_manager:test_support",
+        "//services/audio/common:system_info",
         "//services/network/public/interfaces",
         "//services/preferences/public/cpp",
         "//services/preferences/public/interfaces",
