Prototyping: Mirroring service (Not for review).
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: If3b30d8eeaeaf0da8c40f0405439ff9265e8ce84

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -629,12 +629,22 @@ split_static_library("browser") {
     "media/midi_permission_context.h",
     "media/midi_sysex_permission_context.cc",
     "media/midi_sysex_permission_context.h",
+    "media/mirror_service_audio_capture_host.cc",
+    "media/mirror_service_audio_capture_host.h",
+    "media/mirror_service_proxy.cc",
+    "media/mirror_service_proxy.h",
+    "media/mirror_service_proxy_factory.cc",
+    "media/mirror_service_proxy_factory.h",
+    "media/mirror_service_video_capture_host.cc",
+    "media/mirror_service_video_capture_host.h",
     "media/output_protection_proxy.cc",
     "media/output_protection_proxy.h",
     "media/platform_verification_impl.cc",
     "media/platform_verification_impl.h",
     "media/router/media_router_feature.cc",
     "media/router/media_router_feature.h",
+    "media/udp_transport_host_impl.cc",
+    "media/udp_transport_host_impl.h",
     "media/webrtc/desktop_media_list.h",
     "media/webrtc/desktop_media_list_base.cc",
     "media/webrtc/desktop_media_list_base.h",
@@ -1713,6 +1723,7 @@ split_static_library("browser") {
     "//media/mojo:features",
     "//media/mojo/interfaces:mirror_service_remoting",
     "//media/mojo/interfaces:remoting",
+    "//media/mojo/services",
     "//mojo/common",
     "//mojo/edk/system",
     "//mojo/public/cpp/bindings",
