--- a/chrome/browser/chrome_content_browser_manifest_overlay.json
+++ b/chrome/browser/chrome_content_browser_manifest_overlay.json
@@ -40,6 +40,7 @@
         "identity": [ "identity_manager" ],
         // Only used in classic ash case.
         "local_state": [ "pref_client" ],
+        "mirror": ["media:mirror"],
         "nacl_broker": [ "browser" ],
         "nacl_loader": [ "browser" ],
         "pdf_compositor": [ "compositor" ],
@@ -79,6 +80,7 @@
           "extensions::mime_handler::MimeHandlerService",
           "extensions::mojom::InlineInstall",
           "media_router::mojom::MediaRouter",
+          "media::mojom::MirrorServiceProxy",
           "page_load_metrics::mojom::PageLoadMetrics",
           "password_manager::mojom::CredentialManager",
           "translate::mojom::ContentTranslateDriver",
