--- a/content/public/app/BUILD.gn
+++ b/content/public/app/BUILD.gn
@@ -185,6 +185,7 @@ service_manifest("packaged_services_manifest") {
     "//content/network:manifest",
     "//media/mojo/services:cdm_manifest",
     "//media/mojo/services:media_manifest",
+    "//media/mojo/services/mirror:manifest",
     "//services/data_decoder:manifest",
     "//services/device:manifest",
     "//services/resource_coordinator:manifest",
