--- a/content/public/browser/BUILD.gn
+++ b/content/public/browser/BUILD.gn
@@ -275,6 +275,8 @@ source_set("browser_sources") {
     "utility_process_host.h",
     "utility_process_host_client.h",
     "utility_process_mojo_client.h",
+    "video_capture_device_launcher.cc",
+    "video_capture_device_launcher.h",
     "vpn_service_proxy.h",
     "web_contents.cc",
     "web_contents.h",
