--- a/media/capture/BUILD.gn
+++ b/media/capture/BUILD.gn
@@ -67,6 +67,8 @@ source_set("capture_device_specific") {
     "video/file_video_capture_device.h",
     "video/file_video_capture_device_factory.cc",
     "video/file_video_capture_device_factory.h",
+    "video/video_capture_buffer_context.cc",
+    "video/video_capture_buffer_context.h",
     "video/video_capture_buffer_handle.h",
     "video/video_capture_device.cc",
     "video/video_capture_device.h",
