[ozone/drm] Modify GpuProcessHost to use ozone/drm/mojo
Modify GpuProcessHost to be able to inject the necessary mojo pipe
creation functionality so that ozone/drm can use mojo IPC when enabled
by a command line flag.

BUG=620927

Change-Id: I43cb676127b3889f5186fd18b74463ee4ed38094

--- a/content/public/app/mojo/content_gpu_manifest.json
+++ b/content/public/app/mojo/content_gpu_manifest.json
@@ -11,9 +11,11 @@
           "content::mojom::ChildHistogramFetcherFactory",
           "IPC::mojom::ChannelBootstrap",
           "service_manager::mojom::ServiceFactory",
-          "viz::mojom::CompositingModeReporter",
+          "ui::ozone::mojom::DeviceCursor",
+          "ui::ozone::mojom::DrmDevice",
+         "viz::mojom::CompositingModeReporter",
           "viz::mojom::VizMain"
-        ],
+         ],
         "service_manager:service_factory": [
           "service_manager::mojom::ServiceFactory"
         ]
