[Downloads ukm] Initial implementation.
Begin implementation for downloads by creating entries in ukm.xml and
a DownloadUkmHelper following go/downloads-ukm for:
- Download.Started: file_type, download_source
- Download.Interrupted: change_in_file_size, reason,
resulting_file_size, time_since_start
- Download.Resumed: mode, time_since_start
- Download.Completed: resulting_file_size, time_since_start

The implementation strategy is to have a ukm_download_id persisted
that will uniquely identify each download. The ukm_source_id will be
reported only at the start of the download.

Bug:785557
Change-Id: I94b46bc3287fcde949e58424dc929e71cec7df16

--- a/content/public/browser/BUILD.gn
+++ b/content/public/browser/BUILD.gn
@@ -107,6 +107,7 @@ jumbo_source_set("browser_sources") {
     "devtools_socket_factory.h",
     "discardable_shared_memory_manager.h",
     "dom_storage_context.h",
+    "download_content.h",
     "download_danger_type.h",
     "download_interrupt_reason_values.h",
     "download_interrupt_reasons.h",
@@ -234,6 +235,7 @@ jumbo_source_set("browser_sources") {
     "resource_throttle.cc",
     "resource_throttle.h",
     "restore_type.h",
+    "resume_mode.h",
     "save_page_type.h",
     "screen_orientation_delegate.h",
     "security_style_explanation.cc",
