--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -2955,6 +2955,9 @@ consoles: {
   builders: {
     name: "buildbot/chromium.infra.cron/wpt-importer"
   }
+  builders: {
+    name: "buildbot/chromium.infra.cron/Build From Tarball"
+  }
 }
 
 consoles: {
@@ -3736,13 +3739,7 @@ consoles: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_asan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_asan_variable"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_browser_side_navigation_rel"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_cast_variable"
   }
   builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_cfi_rel_ng"
@@ -3751,19 +3748,10 @@ consoles: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_asan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_asan_variable"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_msan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_msan_variable"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_variable_chrome"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_chromeos_variable_deflake"
   }
   builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_clobber_deterministic"
@@ -3799,9 +3787,6 @@ consoles: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_msan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_msan_variable"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_ozone_compile_only_ng"
   }
   builders: {
@@ -3811,40 +3796,10 @@ consoles: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_tsan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_tsan_variable"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_ubsan_rel_ng"
   }
   builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_variable"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_variable_32"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_variable_chrome"
-  }
-  builders: {
     name: "buildbot/tryserver.chromium.linux/linux_chromium_variable_clobber"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_variable_deflake"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_webkit_asan_variable"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_webkit_leak_variable"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_webkit_msan_variable"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromium_webkit_variable"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_chromiumos_full_variable"
   }
   builders: {
     name: "buildbot/tryserver.chromium.linux/linux_layout_tests_layout_ng"
@@ -3875,9 +3830,6 @@ consoles: {
   }
   builders: {
     name: "buildbot/tryserver.chromium.linux/linux_upload_clang"
-  }
-  builders: {
-    name: "buildbot/tryserver.chromium.linux/linux_vr"
   }
 }
 
