--- a/luci-milo-dev.cfg
+++ b/luci-milo-dev.cfg
@@ -393,11 +393,13 @@ consoles: {
 
   builders: {
     name: "buildbot/chromium.linux/Linux Builder"
+    name: "buildbucket/luci.chromium.ci/Linux Builder"
     category: "chromium.linux|release"
     short_name: "bld"
   }
   builders: {
     name: "buildbot/chromium.linux/Linux Tests"
+    name: "buildbucket/luci.chromium.ci/Linux Tests"
     category: "chromium.linux|release"
     short_name: "tst"
   }
