--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -76,6 +76,16 @@ job {
   }
 }
 
+job {
+  id: "Linux Builder"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.chromium.ci"
+    builder: "Linux Builder"
+  }
+}
+
 ################################################################################
 # Mac Builders. Sorted alphabetically.
 ################################################################################
