--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -33,6 +33,7 @@ trigger {
   triggers: "GPU Linux Builder"
   triggers: "Linux_Builder_SANDBOX"
   triggers: "Linux Builder (dbg)"
+  triggers: "Linux Builder"
 
   # Mac. Sorted alphabetically.
   triggers: "Mac Builder (dbg)"
@@ -73,6 +74,16 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.chromium.ci"
     builder: "Linux Builder (dbg)"
+  }
+}
+
+job {
+  id: "Linux Builder"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.chromium.ci"
+    builder: "Linux Builder"
   }
 }
 
