Only Log SyncPasswordHashChange if there is actual change
Refactor HashPasswordManger class such that PasswordManager.
SyncPasswordHashChange will only be logged if there is actual change.

Also add one more possible enum value to SyncPasswordHashChange.

Bug:657041
Change-Id: I3afbea76ee9a31376f7a6752b3933cf278328378

--- a/components/password_manager/core/browser/BUILD.gn
+++ b/components/password_manager/core/browser/BUILD.gn
@@ -229,13 +229,18 @@ static_library("hash_password_manager") {
   sources = [
     "hash_password_manager.cc",
     "hash_password_manager.h",
+    "password_manager_metrics_util.cc",
+    "password_manager_metrics_util.h",
+    "password_reuse_defines.h",
   ]
   deps = [
     "//base:base",
+    "//components/autofill/core/common:common",
     "//components/os_crypt",
     "//components/password_manager/core/common",
     "//components/prefs",
     "//crypto",
+    "//url",
   ]
 }
 
