Add "Ozone Linux" to chromium.linux console too.
Bug: 805764
Change-Id: I4518d0e16e3a1393004c2b2522a64ebb1f5ccdfa

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -905,6 +905,11 @@ consoles: {
     category: "fuchsia"
     short_name: "x64"
   }
+  builders: {
+    name: "buildbot/chromium.linux/Ozone Linux"
+    category: "ozone"
+    short_name: "bld"
+  }
 }
 
 consoles: {
