--- a/luci-milo-dev.cfg
+++ b/luci-milo-dev.cfg
@@ -901,6 +901,11 @@ consoles: {
     category: "fuchsia"
     short_name: "x64"
   }
+  builders: {
+    name: "buildbot/chromium.linux/Ozone Linux"
+    category: "ozone"
+    short_name: "bld"
+  }
 }
 
 consoles: {
