Add new Touchable Chrome vector icons for the omnibox.
This CL adds the new omnibox vector icons for Touchable Chrome, and
uses them in place of the existing icons when the kTouchableChrome
feature is active.

BUG=801583

Change-Id: I38b593e8ee3d734eadef00ea8b31c69affffc493

--- a/components/omnibox/browser/BUILD.gn
+++ b/components/omnibox/browser/BUILD.gn
@@ -22,12 +22,16 @@ aggregate_vector_icons("omnibox_vector_icons") {
   icons = [
     "blank.1x.icon",
     "blank.icon",
+    "bookmark.icon",
     "calculator.1x.icon",
     "calculator.icon",
+    "clear.icon",
     "extension_app.1x.icon",
     "extension_app.icon",
     "http.icon",
     "keyword_search.icon",
+    "page.icon",
+    "search.icon",
     "star.1x.icon",
     "star.icon",
     "tab.icon",
